Compiler/tests/semantics/fail/tipo_retorno_System.java
// Falla porque no se puede definir un metodo con tipo de retorno System.

class Test {
	static void main(){

	}

	dynamic System systemReturn() {
	
	}
}